--- a/.travis.yml
+++ b/.travis.yml
@@ -23,8 +23,8 @@ jobs:
         - ./gradlew testMigrate
       script: ./gradlew clean build
       before_deploy:
-        - git config --local user.name "Travis CI"
-        - git config --local user.email "travis@example.com"
+        - git config --local user.name "SeanIgoTMO"
+        - git config --local user.email "sean.igo@t-mobile.com"
         - git tag -f $RELEASE_TAG
       deploy:
         provider: releases
