fixed registration url configurations

--- a/manifest-backlog.yml
+++ b/manifest-backlog.yml
@@ -6,6 +6,6 @@ applications:
   memory: 1G
   instances: 1
   env:
-    REGISTRATION_SERVER_ENDPOINT: http://pal-tracker-distributed-renzo-sean-registration.apps.pikes.pal.pivotal.io
+    REGISTRATION_SERVER_ENDPOINT: https://registration-pal-renzo-sean.apps.pikes.pal.pivotal.io/
   services:
   - tracker-backlog-database
